# QSTN

./: .gitignore  .pre-commit-config.yaml  README.md  naming_scheme.md  pyproject.toml  pyproject_lite.toml  requirements.txt  setup.py
.github/workflows/: tests.yaml
docs/: api-reference.md  api_reference.md  conf.py  index.md  installation.md  quickstart.ipynb  quickstart.md  requirements.txt
docs/api/: modules.rst  qstn.inference.rst  qstn.parser.rst  qstn.rst  qstn.utilities.rst  surveygen.inference.rst  surveygen.parser.rst  surveygen.rst  surveygen.utilities.rst
docs/foundations/: answer_options_tutorial.ipynb  index.md  inference_batching_tutorial.ipynb  llm_prompt_tutorial.ipynb  response_generation_parsing_tutorial.ipynb
docs/getting_started/: index.md
docs/guides/: base_models.ipynb  image_models.ipynb  index.md  tutorial1.ipynb  tutorial1.md  tutorial2.ipynb  tutorial2.md  tutorial3.ipynb
docs/persona_collection/: ggp.ipynb
docs/resources/: german_general_personas.ipynb  index.md
gui/: pyproject.toml  requirements.txt
gui/src/: Start_Page.py
scripts/: release.sh
src/qstn/: __init__.py  _llm_prompt_persistence.py  _questionnaire_loader.py  _version.py  logger.py  prompt_builder.py  survey_manager.py
src/survey_gen/: survey_manager.py
src/surveygen/: llm_interview.py  survey_manager.py
survey_gen/: survey_manager.py  survey_prompting.ipynb  test.csv
survey_gen/parser/: llm_answer_parser.py
surveys/: BFI_3.csv  BFI_44.csv  SD3.csv  WVS_ethic.csv
tests/: __init__.py  conftest.py  test_logger.py  test_versioning.py
tests/basic_functionality/: __init__.py  test_german_persona_workflow.py  test_simple_cases.py  test_single_item.py
tests/inference/: __init__.py  test_dynamic_pydantic.py  test_inference_extra.py  test_local_inference_helpers.py  test_local_inference_run.py  test_multimodal.py  test_reasoning_parser.py  test_reasoning_parser_additional.py  test_remote_inference_helpers.py  test_remote_inference_run.py  (+1 more)
(+65 files in other folders)
