[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "survey_gen"
version = "0.1.0"
description = "Survey generation tool"
authors = [
    { name = "Maximilian Kreutner", email = "maximilian.kreutner@uni-mannheim.de" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [] 