[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "qstn"
dynamic = ["version"]
description = "A Modular Framework for Robust Questionnaire Inference with Large Language Models"
authors = [
    { name = "Maximilian Kreutner", email = "maximilian.kreutner@uni-mannheim.de" }
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pandas>=2.2.3",
    "pydantic>=2.11.4",
    "openai",
    "json_repair",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
vllm = ["vllm>=0.12"]

dev = [
    "black",
    "ruff",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov"
]

[project.urls]
Homepage = "https://github.com/dess-mannheim/QSTN"
Documentation = "https://qstn.readthedocs.io/en/latest/index.html"

[tool.hatch.build.targets.wheel]
packages = ["src/qstn"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/qstn/_version.py"

[tool.hatch.build]
artifacts = ["src/qstn/_version.py"]

[tool.black]
target-version = ["py312"]
line-length = 100
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
  "src/qstn/_version.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = [
    # zip without `strict=`
    "B905",
]

[tool.ruff.lint.isort]
combine-as-imports = true
